--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
    "license": "GNU GPL v3",
    "authors": [
       {
-         "name": "fabs aka (nourdine)",
+         "name": "nourdine",
          "email": "admin@nourdine.net"
       }
    ],
