--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
    "license": "GNU GPL v3",
    "authors": [
       {
-         "name": "nourdine",
-         "email": "admin@nourdine.net"
+         "name": "nourdine"
       }
    ],
    "require": {
