--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,17 @@
       }
    ],
    "require": {
-      "php": ">=5.4"
+      "php": ">=7.4.3",
+      "phpunit/phpunit": "^9.5"
    },
    "autoload": {
       "psr-0": {
          "introspekt": "src/"
       }
-   }
+   },
+   "scripts": {
+      "test": [
+         "vendor/bin/phpunit --testdox --debug"
+      ]
+  }
 }
